# tents

./: CMakeCache.txt  CMakeLists.txt  DartConfiguration.tcl  README.md  game.c  game_aux.c  game_sdl.c  game_solve.c  game_test_damy.c  game_test_tberthier.c  game_test_yibrahimabak.c  game_text.c  game_tools.c  game_tools.h  model.c  save  toolbox.h
android/: AndroidManifest.xml  build.xml
android/jni/src/: Android.mk  game_sdl.c  game_text.c  lien.sh  toolbox.h
data/: game_2x4.tnt  game_3x3.tnt  game_3x3d.tnt  game_3x3w.tnt  game_3x3wd.tnt  game_4x4w.tnt  game_default.tnt  game_default_solution.tnt  random_20_20.tnt  random_30_30.tnt
game bugs/: list.md
